--- a/package.json
+++ b/package.json
@@ -24,19 +24,25 @@
     "@hono/zod-validator": "0.4.2",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.38.2",
+    "eslint-config-prettier": "9.1.0",
     "hono": "4.6.14",
     "just-memoize": "2.2.0",
     "postgres": "3.4.5",
+    "prettier": "3.4.2",
     "ulid": "2.3.0",
     "zod": "3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@eslint/js": "9.17.0",
     "@tsconfig/node-lts": "20.1.3",
     "@tsconfig/strictest": "2.0.5",
     "@types/node": "20.17.10",
     "drizzle-kit": "0.30.1",
+    "eslint": "9.17.0",
+    "globals": "15.14.0",
     "typescript": "5.7.2",
+    "typescript-eslint": "8.18.1",
     "vite": "5.4.11",
     "vite-node": "1.6.0",
     "vitest": "1.6.0"
