--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "16.4.7",
     "drizzle-orm": "0.38.2",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-neverthrow": "1.1.4",
     "hono": "4.6.14",
     "just-memoize": "2.2.0",
+    "neverthrow": "8.1.1",
     "postgres": "3.4.5",
     "prettier": "3.4.2",
     "ulid": "2.3.0",
