--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "vite build",
     "start": "node dist/index.mjs",
     "lint": "biome ci .",
+    "format": "biome format .",
+    "check:write": "biome check --write",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "type-check": "tsc --pretty --noEmit",
@@ -24,13 +26,11 @@
     "@hono/zod-validator": "0.4.2",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.38.2",
-    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-neverthrow": "1.1.4",
     "hono": "4.6.14",
     "just-memoize": "2.2.0",
     "neverthrow": "8.1.1",
     "postgres": "3.4.5",
-    "prettier": "3.4.2",
     "ulid": "2.3.0",
     "zod": "3.24.1"
   },
@@ -41,7 +41,6 @@
     "@tsconfig/strictest": "2.0.5",
     "@types/node": "20.17.10",
     "drizzle-kit": "0.30.1",
-    "eslint": "9.17.0",
     "globals": "15.14.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.18.1",
