--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "Bundler"
-  }
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
